fix: adapt content to prevent overflow

--- a/src/components/RandomChar/RandomChar.module.css
+++ b/src/components/RandomChar/RandomChar.module.css
@@ -10,7 +10,7 @@
 .charTitle {
   background: var(--cra-accent-color);
   color: var(--cra-font-light);
-  padding: 4px;
+  padding: 2px 4px;
   text-align: center;
   text-transform: uppercase;
 }
